# pioneer_codework

./: .gitignore  calibrate_camera.py  distore_images.py  err.txt  eval.py  evaluate_dataset.py  evaluate_depth_maps.py  infer.py  live_camera_calibration.py  live_camera_distore.py  live_camera_features_tracking.py  live_camera_sfm.py  precompute_kitti_pose.py  temporal_scaling.py  test_reconstruction.py  test_vio_on_euroc.py  testing_child_processes.py  train.py  visualize_dataset.py
_datasets/entities/: camera_frame.py  imu_measurement.py
config/: config.py  default_config.py  model_config.py  train_kitti.yaml  vio_parameters.py
config/kitti_raw/: kitti_09_30_config.yaml  kitti_10_03_config.yaml
datasets/: __init__.py  augmentations.py  dgp_dataset.py  euroc_dataset.py  image_dataset.py  kitti_dataset.py  transforms.py
geometry/: camera.py  camera_generic.py  pinhole_camera.py  pose.py  pose_estimator.py
lib/: alignments.py  camera_helpers.py  feature_helpers.py  image_helpers.py  pose_helpers.py  tictoc.py  vio_helpers.py
loggers/: __init__.py  wandb_logger.py
losses/: loss_base.py  multiview_photometric_loss.py  photometric_loss.py  velocity_loss.py
models/: SelfSupModel.py  SfmModel.py  VelSupModel.py  base_model.py  depth_model.py  model_checkpoint.py  model_utils.py  model_wrapper.py
networks/: depth_layers.py  depth_network.py
networks/depth/: DepthResNet.py  PackNet01.py  PackNetSAN01.py  PackNetSlim01.py  RaySurfaceResNet.py
networks/layers/: minkowski_encoder.py
networks/pose/: PoseResNet.py
pose_estimator/_not_needed_anymore/: _old_node_file.cpp  old_globalopt_node.cpp  old_globalopt_node.h  old_pose_graph_node.cpp  vio.cpp  visualization.cpp
pose_estimator/src/camera_models/: CMakeLists.txt
pose_estimator/src/camera_models/src/: intrinsic_calib.cc
pose_estimator/src/camera_models/src/calib/: CameraCalibration.cc
pose_estimator/src/camera_models/src/chessboard/: Chessboard.cc
pose_estimator/src/global_fusion/: CMakeLists.txt  package.xml
pose_estimator/src/global_fusion/include/: globalopt.h  globalopt_node.h
pose_estimator/src/global_fusion/src/: globalopt.cpp  globalopt_node.cpp
pose_estimator/src/loop_fusion/: CMakeLists.txt  package.xml
pose_estimator/src/loop_fusion/include/: pose_graph_essentials.h  pose_graph_node.h
pose_estimator/src/loop_fusion/include/utility/: CameraPoseVisualization.h
pose_estimator/src/loop_fusion/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_estimator/src/loop_fusion/src/utility/: CameraPoseVisualization.cpp
pose_estimator/src/python/: CMakeLists.txt  package.xml
pose_estimator/src/python/include/: vio.h
pose_estimator/src/python/src/: vio.cpp
pose_estimator/src/shared/: CMakeLists.txt  package.xml
pose_estimator/src/shared/include/: messages.h  parameters.h
pose_estimator/src/shared/include/utility/: tic_toc.h  utility.h
pose_estimator/src/shared/src/: parameters.cpp
pose_estimator/src/vins_estimator/: CMakeLists.txt  package.xml
pose_estimator/src/vins_estimator/include/: estimator_node.h
pose_estimator/src/vins_estimator/include/estimator/: estimator.h  feature_manager.h
pose_estimator/src/vins_estimator/include/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
pose_estimator/src/vins_estimator/include/featureTracker/: feature_tracker.h
pose_estimator/src/vins_estimator/src/: KITTIGPSTest.cpp  estimator_node.cpp
trainers/: __init__.py  base_trainer.py  horovod_trainer.py
utils/: config.py  depth.py  horovod.py  image.py  load.py  logging.py  misc.py  reduce.py  save.py
visualization/: trajectory_view.py
(+13 files in other folders)
